Distance renamed to DistanceF.
This was done to reflect the fact that there are two Distance types now, one for float and another for double (DistanceF and DistanceD respectively).

--- a/RealUnits/RealUnits.csproj
+++ b/RealUnits/RealUnits.csproj
@@ -64,7 +64,7 @@
     <Compile Include="Rectangle2f.cs" />
     <Compile Include="PixelVector.cs" />
     <Compile Include="UnitCentimeter.cs" />
-    <Compile Include="Distance.cs" />
+    <Compile Include="DistanceF.cs" />
     <Compile Include="UnitDecimeter.cs" />
     <Compile Include="UnitFoot.cs" />
     <Compile Include="UnitInch.cs" />
